# docker-flask

./: Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
